--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
     "manifest_version": 3,
     "name": "Poker Hand Lookup",
-    "version": "1.0.0",
-    "description": "Quickly look up poker hand rankings from a chart.",
+    "version": "1.1.0",
+    "description": "Quickly look up poker hand rankings and values for better strategy and gameplay.",
     "permissions": [],
     "action": {
         "default_popup": "popup.html",
